Enhance exception handling: introduce EmptyDeckException and DieNotRolledException, refactor methods to use specific exceptions, and improve error messages across game components